--- a/src/app/pages/Product/ProductsCategory/styles.module.css
+++ b/src/app/pages/Product/ProductsCategory/styles.module.css
@@ -1,5 +1,11 @@
 .grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+}
+
+@media (max-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
 }
