--- a/src/app/components/Nav/NavBar/styles.module.css
+++ b/src/app/components/Nav/NavBar/styles.module.css
@@ -37,7 +37,7 @@
 
 .menu {
   position: fixed;
-  width: 15vw;
+  width: 21vw;
   top: 30px;
   left: 52px;
   background-color: #828282;
@@ -108,7 +108,7 @@
 
   .menu {
     position: fixed;
-    width: 30vw;
+    width: 25vw;
     top: 30px;
     right: calc(100% - 70px);
     background-color: #828282;
@@ -119,6 +119,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 12px;
   }
 
   .rightContent {
@@ -138,5 +139,10 @@
     border: none;
     padding: 0;
     cursor: pointer;
+    font-size: 12px;
+  }
+
+  .menuIcon {
+    font-size: 20px;
   }
 }
