--- a/src/app/pages/Auth/Login/styles.module.css
+++ b/src/app/pages/Auth/Login/styles.module.css
@@ -42,3 +42,21 @@
 .form button:hover {
   background-color: #322946;
 }
+
+@media (max-width: 480px) {
+  .container {
+    max-width: 100%;
+    padding: 0 20px;
+  }
+}
+
+@media (max-width: 360px) {
+  .form input,
+  .form button {
+    font-size: 14px;
+  }
+
+  .form button {
+    padding: 8px 16px;
+  }
+}
