--- a/src/app/pages/Category/Categories/styles.module.css
+++ b/src/app/pages/Category/Categories/styles.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  margin: 28px;
 }
 
 .category {
@@ -23,4 +24,18 @@
   width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .main {
+    grid-template-columns: repeat(2, 1fr);
+    margin: 25px;
+  }
+}
+
+@media (max-width: 480px) {
+  .main {
+    grid-template-columns: repeat(1, 1fr);
+    margin: 22px;
+  }
 }
