Estilos en página ProductDetail.

--- a/src/app/components/Nav/NavBar/styles.module.css
+++ b/src/app/components/Nav/NavBar/styles.module.css
@@ -132,6 +132,7 @@
 
   .totalButton {
     position: relative;
+    align-items: center;
     top: 10px;
     left: 50%;
     transform: translateX(-50%);
