--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -14,12 +12,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #c8cbf4;
   text-decoration: inherit;
 }
 
 a:hover {
-  color: #535bf2;
+  color: #969ade;
 }
 
 body {
@@ -77,7 +75,7 @@ body.dark-mode {
 }
 
 a.dark-mode {
-  color: #646cff;
+  color: #ffffff;
 }
 
 a.dark-mode:hover {
@@ -93,10 +91,22 @@ body.light-mode {
   background-color: #ffffff;
 }
 
+a.light-mode {
+  color: #000000;
+}
+
 a.light-mode:hover {
   color: #747bff;
 }
 
 button.light-mode {
   background-color: #303030;
+}
+
+.dark-mode a {
+  color: #0f0d0d;
+}
+
+.light-mode a {
+  color: #000000;
 }
