--- a/src/app/components/ProductComponent/styles.module.css
+++ b/src/app/components/ProductComponent/styles.module.css
@@ -11,3 +11,10 @@
     margin: 22px;
   }
 }
+
+.pagination {
+  display: flex;
+  justify-content: space-around;
+  margin: 30px;
+  padding: 10px;
+}
