--- a/src/app/components/Nav/NavBar/styles.module.css
+++ b/src/app/components/Nav/NavBar/styles.module.css
@@ -50,6 +50,21 @@
   justify-content: center;
 }
 
+.filterMenu {
+  position: fixed;
+  top: 70px;
+  right: 10px;
+  background-color: #828282;
+  border: 1px solid #322946;
+  border-radius: 7px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
 .menuList {
   list-style: none;
   padding: 0;
@@ -69,14 +84,32 @@
   margin-top: 10px;
 }
 
-.rightContent {
-  display: flex;
-  margin-right: 30px;
-  align-items: center;
-  justify-content: flex-end;
+.loginButton,
+.registerButton {
+  background-color: #33A1DE;
+  color: #FFFFFF;
+  font-size: 11px;
+  padding: 8px 16px;
+  margin-bottom: 8px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.transparentButton {
+.loginButton:hover,
+.registerButton:hover {
+  background-color: #1C77C3;
+}
+
+.rightContent {
+  display: flex;
+  flex-direction: column;
+  margin-right: 30px;
+  align-items: center;
+}
+
+/* .transparentButton {
   background: none;
   border: none;
   padding: 0;
@@ -86,7 +119,7 @@
 .transparentButton:focus,
 .totalButton:focus {
   outline: none;
-}
+} */
 
 @media (max-width: 768px) {
   .navbarContainer {
@@ -120,6 +153,12 @@
     align-items: center;
     justify-content: center;
     font-size: 12px;
+  }
+
+  .filterMenu {
+    width: 80vw;
+    top: 100px;
+    right: calc(50% - 40vw);
   }
 
   .rightContent {
