--- a/src/app/pages/Cart/CartDetail/styles.module.css
+++ b/src/app/pages/Cart/CartDetail/styles.module.css
@@ -1,10 +1,16 @@
 .gridContainer {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
 }
 
-.productCard {
-  width: 30%;
+.gridContainer h1 {
+  margin-bottom: 20px;
+}
+
+.gridContainer p {
   margin-bottom: 20px;
 }
