--- a/src/app/pages/Cart/CartDetail/styles.module.css
+++ b/src/app/pages/Cart/CartDetail/styles.module.css
@@ -1,10 +1,8 @@
 .gridContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  margin: 28px;
 }
 
 .gridContainer h1 {
@@ -13,4 +11,19 @@
 
 .gridContainer p {
   margin-bottom: 20px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.emptyCartContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
 }
