--- a/src/app/components/Nav/NavBar/styles.module.css
+++ b/src/app/components/Nav/NavBar/styles.module.css
@@ -81,7 +81,7 @@
   text-decoration: none;
 }
 
-.buttonsBelow{
+.buttonsBelow {
   display: flex;
 }
 
@@ -109,7 +109,6 @@
 }
 
 .logoutButton li {
-
   margin-bottom: 5px;
 }
 
@@ -152,21 +151,30 @@
 }
 
 .logoCenter p {
+  font-size: small;
+  margin-top: 10px;
+  color: #1ed11e;
+}
+
+.cartButton {
+  display: flex;
+  justify-content: center;
   margin-top: 10px;
 }
 
-
-/* .transparentButton {
-  background: none;
+.categoryButton {
+  font-size: 16px;
+  padding: 8px 16px;
   border: none;
-  padding: 0;
+  background-color: #007bff;
+  color: #ffffff;
   cursor: pointer;
+  transition: background-color 0.25s;
 }
 
-.transparentButton:focus,
-.totalButton:focus {
-  outline: none;
-} */
+.categoryButton:hover {
+  background-color: #0056b3;
+}
 
 @media (max-width: 768px) {
   .navbarContainer {
@@ -202,16 +210,24 @@
     font-size: 12px;
   }
 
-  .buttonsBelow{
+  .buttonsBelow {
     display: grid;
   }
-    
+
   .rightContent {
     display: flex;
     margin-top: 0;
     margin-right: 0px;
     align-items: center;
     justify-content: flex-end;
+  }
+
+  .loginButton,
+  .registerButton {
+    font-size: 7px;
+    padding: 8px 16px;
+    margin-bottom: 8px;
+    transition: background-color 0.5s ease;
   }
 
   .totalButton {
@@ -229,5 +245,34 @@
 
   .menuIcon {
     font-size: 20px;
+  }
+
+  .logoCenter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: rgb(198, 98, 27);
+  }
+
+  .logoCenter p {
+    font-size: x-small;
+    margin-top: 10px;
+    color: rgb(184, 167, 11);
+  }
+
+  .cartButton {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+
+  .categoryButton {
+    background-color: #007bff;
+    font-size: 10px;
+  }
+
+  .categoryButton:hover {
+    background-color: #0056b3;
   }
 }
