--- a/src/app/components/ProductCard/styles.module.css
+++ b/src/app/components/ProductCard/styles.module.css
@@ -5,26 +5,31 @@
   align-items: center;
   border: 1px solid #ccc;
   border-radius: 4px;
-  padding: 20px;
+  padding: 7px;
   margin: 28px;
   background-color: #1e1b1b;
+  
 }
+
 
 .image_container {
   width: 100%;
-  height: 300px;
+  height: 400px;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: #1e1b1b;
+  border-radius: 37px;
 }
 
 .product_image {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%; 
+  height: 100%;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+
 
 .info_container {
   display: flex;
@@ -117,6 +122,12 @@
   margin-top: 10px;
 }
 
+.cartButton{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
 .removeButton button {
   font-size: 16px;
   padding: 8px 16px;
@@ -128,6 +139,19 @@
 
 .removeButton button:hover {
   background-color: #cc0000;
+}
+
+.categoryButton {
+  font-size: 16px;
+  padding: 8px 16px;
+  border: none;
+  background-color: #4caf50;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.categoryButton:hover {
+  background-color: #45a049;
 }
 
 @media (max-width: 768px) {
