--- a/src/app/components/ProductComponent/styles.module.css
+++ b/src/app/components/ProductComponent/styles.module.css
@@ -1,14 +1,18 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); /* Ajusta el ancho mínimo y máximo */
   gap: 20px;
   margin: 28px;
 }
 
 @media (max-width: 768px) {
   .grid {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Ajusta el ancho mínimo y máximo en dispositivos móviles */
     margin: 22px;
+  }
+
+  .title{
+    font-size: xx-large;
   }
 }
 
