--- a/src/app/pages/Home/styles.module.css
+++ b/src/app/pages/Home/styles.module.css
@@ -35,3 +35,17 @@
 .link:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+@media (max-width: 768px) {
+  .container {
+    font-size: 16px;
+  }
+
+  .title {
+    font-size: 24px;
+  }
+
+  .link {
+    font-size: 14px;
+  }
+}
