--- a/src/app/components/Nav/NavBar/styles.module.css
+++ b/src/app/components/Nav/NavBar/styles.module.css
@@ -147,7 +147,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: aquamarine;
+  color: rgb(0, 255, 251)
 }
 
 .logoCenter p {
@@ -244,7 +244,7 @@
   }
 
   .menuIcon {
-    font-size: 20px;
+    font-size: 23px;
   }
 
   .logoCenter {
@@ -252,13 +252,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: rgb(198, 98, 27);
+    color: rgb(0, 255, 251)
   }
 
   .logoCenter p {
     font-size: x-small;
     margin-top: 10px;
-    color: rgb(184, 167, 11);
+    color: rgb(0, 234, 255);
   }
 
   .cartButton {
