--- a/src/app/components/ProductCard/styles.module.css
+++ b/src/app/components/ProductCard/styles.module.css
@@ -6,9 +6,7 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 7px;
-  margin: 28px;
-  background-color: #1e1b1b;
-  
+  margin: 28px;  
 }
 
 
@@ -35,11 +33,56 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  color: #b6b6b6;
   margin-top: 20px;
   align-items: center;
 }
 
+.title {
+  font-size: 24px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.description {
+  font-size: 18px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.price {
+  font-size: 16px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+
+.handler_subtotal {
+  display: grid;
+  align-items: center;
+  justify-content: space-between;
+  margin: 30px 0;
+}
+
+.handler {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+
+.counter {
+  font-size: 22px;
+  margin: 0 50px;
+  flex: 1;
+}
+
+.subtotal {
+  font-size: 16px;
+  margin-left: 10px;
+  text-align: center;
+}
+
+
+/* 
 .title {
   font-size: 24px;
   margin-bottom: 10px;
@@ -86,6 +129,14 @@
   flex: 1;
 }
 
+.subtotal {
+  font-size: 16px;
+  margin-left: 10px;
+  text-align: center;
+  color: #ff9900;
+}
+*/
+
 .remove,
 .add {
   font-size: 22px;
@@ -109,12 +160,6 @@
   background-color: #999;
 }
 
-.subtotal {
-  font-size: 16px;
-  margin-left: 10px;
-  text-align: center;
-  color: #ff9900;
-}
 
 .removeButton {
   display: flex;
