--- a/src/app/pages/Product/ProductDetail/styles.module.css
+++ b/src/app/pages/Product/ProductDetail/styles.module.css
@@ -6,8 +6,14 @@
   border-radius: 4px;
   padding: 20px;
   margin: 28px;
-  background-color: #1e1b1b;
+  background-color: #2b2b2b;
 }
+
+.productContainerLight {
+  background-color: #d3d3d3;
+  color: #333333;
+}
+
 
 .imageContainer {
   flex: 1;
