--- a/src/app/components/Nav/NavBar/styles.module.css
+++ b/src/app/components/Nav/NavBar/styles.module.css
@@ -178,7 +178,7 @@
 
 @media (max-width: 768px) {
   .navbarContainer {
-    position: relative;
+    position: sticky;
     top: 0;
     left: 0;
     right: 0;
