--- a/src/app/components/ProductComponent/styles.module.css
+++ b/src/app/components/ProductComponent/styles.module.css
@@ -5,6 +5,14 @@
   margin: 28px;
 }
 
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .product_container {
   background-color:  #121312;
 }
