--- a/src/app/pages/Buy/styles.module.css
+++ b/src/app/pages/Buy/styles.module.css
@@ -1,5 +1,9 @@
-.buy-title {
-  margin: 10px;
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .cartContainer {
@@ -57,7 +61,7 @@
   margin-bottom: 80px;
 }
 
-.buy-button {
+.buyButton {
   padding: 10px 20px;
   background-color: #007bff;
   color: white;
@@ -69,12 +73,12 @@
   text-decoration: none;
 }
 
-.buy-button:hover {
+.buyButton:hover {
   background-color: #0056b3;
 }
 
 @media (max-width: 768px) {
-  .buy-title {
+  .title {
     font-size: xx-large;
   }
 }
