--- a/src/app/pages/Category/Categories/styles.module.css
+++ b/src/app/pages/Category/Categories/styles.module.css
@@ -5,6 +5,14 @@
   margin: 28px;
 }
 
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .category {
   border: solid 1px white;
   border-radius: 10px;
