--- a/src/app/pages/Product/ProductAdmin/ProductCreate/styles.module.css
+++ b/src/app/pages/Product/ProductAdmin/ProductCreate/styles.module.css
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
 
 form {
