--- a/src/app/components/Filter/styles.module.css
+++ b/src/app/components/Filter/styles.module.css
@@ -1,8 +1,37 @@
+.filterHeader{
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.closeButton {
+  top: 10px;
+  right: 10px;
+  background: gray;
+  border: none;
+  padding: 20px;
+  margin: 20px;
+  font-size: 11px;
+  cursor: pointer;
+}
+
 .filterContainer {
-  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 16px;
+  border-radius: 4px;
+  padding: 7px;
+  margin: 28px;
+}
+
+.formGroup {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 40px;
 }
 
 .filterContainer label {
@@ -42,4 +71,24 @@
 .filterContainer buttonContainer {
   display: flex;
   justify-content: center;
+}
+
+.searchIconContainer {
+  position: absolute;
+  top: 222px;
+  right: 50px;
+}
+
+.searchIcon {
+  font-size: 24px;
+  padding: 4px;
+  background: #a4adff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.searchIcon:hover {
+  background-color: #535bf2;
 }
